# stockfish

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: pr-check-api.yml  pr-check-engine.yml  pr-check-web.yml
api/: Cargo.toml  Dockerfile  README.md  atlas.hcl  env.go  go.mod  main.go  middleware.go  panic.go  rest.go  stockfish.go  types.go  ws.go
api/crates/api-server/: Cargo.toml
api/crates/api-server/src/: auth.rs  config.rs  error.rs  games.rs  hub.rs  main.rs  models.rs  rooms.rs  routes.rs  saved_games.rs  users.rs  ws.rs
api/db/: schema.sql
engine/: Dockerfile  README.md  env.go  env_test.go  go.mod  main.go  middleware.go  middleware_test.go  panic.go  race_test.go  rest.go  rest_test.go  stockfish.go  stockfish_test.go  uci.go  uci_test.go  ws.go  ws_test.go
features/: contracts-are-too-stringly-typed.md  engine-protocol-is-confusing.md  frontend-files-have-too-many-responsibilities.md  incomplete-multiplayer-product-rules.md  opening-lookup-is-inefficient.md  preserve-engine-websocket-singletons.md  race-condition-risk-in-matchmaking-start-game.md  react-query-migration.md  rust-backend-mixes-handlers-rules-sql-and-broadcasts.md  two-competing-user-concepts.md
web/: .env.example  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/public/: robots.txt  site.webmanifest
web/src/: App.tsx  constants.ts  index.css  main.tsx
web/src/components/: Board.tsx  ConfirmModal.tsx  CreateUserModal.tsx  DrawOfferModal.tsx  EvaluationBar.tsx  LanguageSwitcher.tsx  Layout.tsx  MoveClassificationIcon.tsx  MoveList.tsx  OnlineGameSetupModal.tsx  (+3 more)
(+61 files in other folders)
