[workspace]
members = ["crates/api-server"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.95"

[workspace.dependencies]
actix-cors = "0.7.1"
actix-web = "4.14.0"
actix-ws = "0.4.0"
argon2 = "0.5.3"
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.32"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
shakmaty = "0.30.1"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
